<resources>
    <string name="app_name">PruebaValid</string>
    <string name="tab_movie">Movies</string>
    <string name="tab_tv_shows">Tv Shows</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="search_ellipse">Search…</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="overview">Overview</string>
    <string name="recommendations">Recommendations</string>
    <string name="no_connection">Not available offline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
