<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    tools:context="com.example.rruizp.pruebavalid.mainActivity.view.fragment.MovieFragment">

   <android.support.constraint.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       
       <TextView
           android:id="@+id/title_movie_popular"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="8dp"
           android:layout_marginTop="8dp"
           android:textAllCaps="true"
           android:text="@string/popular"
           android:textColor="@color/colorPrimaryDark"
           android:textStyle="bold"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="parent" />

       <android.support.v7.widget.RecyclerView
           android:id="@+id/popular_movie_list"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:background="@color/colorPrimaryDark"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_movie_popular" />

       <TextView
           android:id="@+id/title_movie_top_rated"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="8dp"
           android:layout_marginTop="8dp"
           android:text="@string/top_rated"
           android:textAllCaps="true"
           android:textColor="@color/colorPrimaryDark"
           android:textStyle="bold"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/popular_movie_list" />

       <android.support.v7.widget.RecyclerView
           android:id="@+id/top_rated_movie_list"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:background="@color/colorPrimaryDark"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_movie_top_rated" />

       <TextView
           android:id="@+id/title_movie_upcoming"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="8dp"
           android:layout_marginTop="8dp"
           android:text="@string/upcoming"
           android:textColor="@color/colorPrimaryDark"
           android:textAllCaps="true"
           android:textStyle="bold"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/top_rated_movie_list" />

       <android.support.v7.widget.RecyclerView
           android:id="@+id/upcoming_movie_list"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginBottom="8dp"
           android:layout_marginTop="8dp"
           android:background="@color/colorPrimaryDark"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_movie_upcoming" />

   </android.support.constraint.ConstraintLayout>

</ScrollView>
